# cookiecutter-python-poetry-ci

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cookiecutter.json  pytest.ini  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
hooks/: post_gen_project.py
tests/: test_template.py
{{cookiecutter.repo_name}}/: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml
{{cookiecutter.repo_name}}/docs/: ci-status-checks.md  git-flow.md
{{cookiecutter.repo_name}}/src/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  cli.py
{{cookiecutter.repo_name}}/tests/: test_smoke.py
