[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.gh_owner }}/{{ cookiecutter.repo_name }}"
packages = [
  { include = "{{ cookiecutter.package_name }}", from = "src" }
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
poethepoet = "^0.27.0"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy ."
test = "pytest -q --cov=src --cov-report=term-missing --cov-report=xml"

[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
exclude_also = ["if __name__ == .__main__.:"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
